--- a/MedicalExamination/res/values-zh-rTW/strings.xml
+++ b/MedicalExamination/res/values-zh-rTW/strings.xml
@@ -18,5 +18,12 @@
     <string name="yes">是</string>
     <string name="no">否</string>
     <string name="date_of_checking">檢查日期</string>
+    <string name="login">登入</string>
+    <string name="hint_login_name">帳 號</string>
+    <string name="hint_login_password">密 碼</string>
+    <string name="login_error">帳號密碼錯誤</string>
+    <string name="history">檢測紀錄</string>
+    <string name="basic_test">基本檢測</string>
+    <string name="attentiveness">專注力</string>
 
 </resources>
